# calculator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.cmd  build.sh  linux-cmake.cmd
calculator/: CMakeLists.txt  main.cpp
calculator_library/: CMakeLists.txt
calculator_library/include/: calculator_library.h  calculator_marcos.h
calculator_library/src/: calculator_library.cpp
